--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -132,29 +132,29 @@ CONTENTMAP_DATASOURCE_LBL_DESC="Attiva la mappa grafica che utilizza i TAG di Jo
 CONTENTMAP_JOOMLA_ARTICLES="Articoli di Joomla - Google Map"
 CONTENTMAP_JOOMLA_TAGS="Tag di Joomla - Mappa Grafica"
 CONTENTMAP_DISABLE_GRADATION_LABEL="Disabilita Gradazione"
-CONTENTMAP_DISABLE_GRADATION_DESC="Disabilita la gestione della gradazione dei punti o delle regioni, quelle con meno elementi possono apparire più piccoli e con una scala colore differente."
+CONTENTMAP_DISABLE_GRADATION_DESC="Abilita/disabilita la gradazione del colore e della grandezza. Con la gestione della gradazione dei punti o delle regioni attiva, quelli con meno elementi possono apparire più piccoli e con una scala colore differente, con la gradazione disattiva sono tutti uguali."
 GEO_DISPLAYMODE_LABEL="Tipo elementi da evidenziare"
-GEO_DISPLAYMODE_DESC="Seleziona il tipo di elementi che vuoi evidenziare sulla mappa grafica. Se hai associato agli elementi dei TAG con nomi di città devi impostare Città per visualizzare i vari punti. Se hai associato agli elementi di Joomla dei TAG con nomi di zone, regioni, nazioni allora devi impostare Regioni per visualizzare le zone evidenziate."
+GEO_DISPLAYMODE_DESC="Seleziona il tipo di elementi che vuoi evidenziare sulla mappa grafica. Se hai associato agli elementi di Joomla (articoli, categorie, contatti, ecc..) dei TAG con nomi di città, devi impostare Città/Punti per visualizzare i vari punti. Se hai associato agli elementi di Joomla (articoli, categorie, contatti, ecc..) dei TAG con nomi di zone, regioni, nazioni, allora devi impostare Regioni/Nazioni per visualizzare le zone evidenziate."
 GEO_REGION_LABEL="Zona Mappa"
 GEO_REGION_DESC="Seleziona l'area che vuoi visualizzare nella mappa e che contiene i TAG di riferimento"
 GEO_RESOLUTION_LABEL="Visuale"
 GEO_RESOLUTION_DESC="Seleziona il tipo di visuale della mappa grafica. Se come zona hai scelto una sola nazione puoi attivare la visuale delle relative regioni. Non puoi visualizzare le regioni in zone che comprendono più nazioni. La visualizzazione USA è riservata solo alla selezione dello stato USA."
 GEO_ENABLEREGIONINTERACTIVITY_LABEL="Mappa interattiva"
-GEO_ENABLEREGIONINTERACTIVITY_DESC="Se abilitato evidenzia le zone al passaggio del muse"
+GEO_ENABLEREGIONINTERACTIVITY_DESC="Se abilitata evidenzia le zone al passaggio del mouse"
 GEO_KEEPASPECTRATIO_LABEL="Keep aspect ratio"
 GEO_KEEPASPECTRATIO_DESC="Keep aspect ratio desc"
 GEO_MARKEROPACITY_LABEL="Trasparenza marcatori"
 GEO_MARKEROPACITY_DESC="Il livello di trasparenza dei marcatori, dove 0.0 è completamente trasparente e 1.0 è completamente opaco."
-GEO_COLORAXIS_MINVALUE_LABEL="Min Value"
-GEO_COLORAXIS_MINVALUE_DESC="Minimum value of color column in chart data. if present, specifies a minimum value for chart color data."
-GEO_COLORAXIS_MAXVALUE_LABEL="Max Value"
-GEO_COLORAXIS_MAXVALUE_DESC="Maximum value of color column in chart data. if present, specifies a maximum value for chart color data."
+GEO_COLORAXIS_MINVALUE_LABEL="Valore minimo"
+GEO_COLORAXIS_MINVALUE_DESC="Valore minimo della colonna colore nei dati del grafico. Se presente, specifica un valore minimo per i dati del colore del grafico."
+GEO_COLORAXIS_MAXVALUE_LABEL="Valore massimo"
+GEO_COLORAXIS_MAXVALUE_DESC="Valore massimo della colonna colore nei dati del grafico. Se presente, specifica un valore massimo per i dati del colore del grafico."
 GEO_COLORAXIS_FROMCOLOR_LABEL="Dal colore"
-GEO_COLORAXIS_FROMCOLOR_DESC="Se la gradazione è attiva questo è il colore base del valore minimo"
+GEO_COLORAXIS_FROMCOLOR_DESC="Se la gradazione è attiva, questo è il colore base del valore minimo"
 GEO_COLORAXIS_TOCOLOR_LABEL="Al colore"
-GEO_COLORAXIS_TOCOLOR_DESC="Se la gradazione è attiva questo è il colore del valore massimo"
-GEO_DATALESSREGIONCOLOR_LABEL="Dataless region color"
-GEO_DATALESSREGIONCOLOR_DESC="Colors to assign to regions with no associated data."
+GEO_COLORAXIS_TOCOLOR_DESC="Se la gradazione è attiva, questo è il colore del valore massimo"
+GEO_DATALESSREGIONCOLOR_LABEL="Colore regioni senza dati"
+GEO_DATALESSREGIONCOLOR_DESC="Colore da assegnare alle regioni senza alcun dato associato."
 AUTO_CHOOSE_BASED_ON_THE_FORMAT_OF_THE_DATA="Auto - choose based on the format of the data"
 REGION_MAP="Regioni/Nazioni"
 MARKER_MAP="Città/Punti"
@@ -169,6 +169,6 @@ CONTENTMAP_BEFORECONTENT_LEFT="Alto Sinistra"
 CONTENTMAP_BEFORECONTENT_RIGHT="Alto Destra"
 CONTENTMAP_AFTERCONTENT="Basso"
 CONTENTMAP_EXCLUDE_ARTICLES_LBL="Escludi da Articoli"
-CONTENTMAP_EXCLUDE_ARTICLES_DESC="Inserisci gli ID degli articoli dove non vuoi visualizzare la mappa all'interno degli articoli. Dividi gli ID con la virgola."
+CONTENTMAP_EXCLUDE_ARTICLES_DESC="Inserisci gli ID degli articoli all'interno dei quali non vuoi visualizzare la mappa Dividi gli ID con la virgola."
 CONTENTMAP_EXCLUDE_CATEGORIES_LBL="Escludi da Categorie"
-CONTENTMAP_EXCLUDE_CATEGORIES_DESC="Inserisci gli ID delle categorie dove non vuoi visualizzare la mappa all'interno degli articoli. Dividi gli ID con la virgola."
+CONTENTMAP_EXCLUDE_CATEGORIES_DESC="Inserisci gli ID delle categorie dove non vuoi che si visualizzi la mappa all'interno degli articoli. Dividi gli ID con la virgola."
