--- a/trunk/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
@@ -105,72 +105,70 @@ CONTENTMAP_HIDE_ZOOM_CONTROL="Oculta controles de zoom"
 CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Oculta los controles de Street View en el mapa"
 CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Oculta los controles de Zoom en el mapa"
 
-CONTENTMAP_INTRO_CLEAN_HTML_TAGS_LBL="Filter html tag from intro text"
-CONTENTMAP_INTRO_CLEAN_HTML_TAGS_DSC="Enable/disable filter html tag from intro text"
+CONTENTMAP_INTRO_CLEAN_HTML_TAGS_LBL="Filtra tag html del texto de introducción"
+CONTENTMAP_INTRO_CLEAN_HTML_TAGS_DSC="Activa/desactiva el filtrado de los tag html en el texto de introducción"
 
-CONTENTMAP_CATEGORY_LEGEND_FILTER_DSC="Enable/disable Filter based on categories or tag (only in Joomla 3.x) under the map."
+CONTENTMAP_CATEGORY_LEGEND_FILTER_DSC="Activa/desactiva el filtrado dinámico en categorías o etiquetas (sólo para Joomla 3.x) bajo el mapa."
 
 CONTENTMAP_WATERMARK_URL_LBL="Url Watermark"
-CONTENTMAP_WATERMARK_URL_DSC="Allows you to specify the URL of an image to use as a watermark"
-CONTENTMAP_WATERMARK_POSITION_LBL="Watermark position"
-CONTENTMAP_WATERMARK_POSITION_TOP_CENTER="Top center"
-CONTENTMAP_WATERMARK_POSITION_TOP_LEFT="Top left"
-CONTENTMAP_WATERMARK_POSITION_TOP_RIGHT="Top right"
-CONTENTMAP_WATERMARK_POSITION_LEFT_TOP="Left top"
-CONTENTMAP_WATERMARK_POSITION_RIGHT_TOP="Right top"
-CONTENTMAP_WATERMARK_POSITION_LEFT_CENTER="Left center"
-CONTENTMAP_WATERMARK_POSITION_RIGHT_CENTER="Right center"
-CONTENTMAP_WATERMARK_POSITION_LEFT_BOTTOM="Left bottom"
-CONTENTMAP_WATERMARK_POSITION_RIGHT_BOTTOM="Right bottom"
-CONTENTMAP_WATERMARK_POSITION_BOTTOM_CENTER="Bottom center"
-CONTENTMAP_WATERMARK_POSITION_BOTTOM_LEFT="Bottom left"
-CONTENTMAP_WATERMARK_POSITION_BOTTOM_RIGHT="Bottom right"
+CONTENTMAP_WATERMARK_URL_DSC="Permite especificar la dirección URL de una imagen para utilizar como watermark"
+CONTENTMAP_WATERMARK_POSITION_LBL="Posición Watermark"
+CONTENTMAP_WATERMARK_POSITION_TOP_CENTER="Superior central"
+CONTENTMAP_WATERMARK_POSITION_TOP_LEFT="Superior izquierda"
+CONTENTMAP_WATERMARK_POSITION_TOP_RIGHT="Superior derecha"
+CONTENTMAP_WATERMARK_POSITION_LEFT_TOP="Izquierda superior"
+CONTENTMAP_WATERMARK_POSITION_RIGHT_TOP="Derecha superior"
+CONTENTMAP_WATERMARK_POSITION_LEFT_CENTER="Izquierda central"
+CONTENTMAP_WATERMARK_POSITION_RIGHT_CENTER="Derecha central"
+CONTENTMAP_WATERMARK_POSITION_LEFT_BOTTOM="Izquierda inferior"
+CONTENTMAP_WATERMARK_POSITION_RIGHT_BOTTOM="Derecha inferior"
+CONTENTMAP_WATERMARK_POSITION_BOTTOM_CENTER="Inferior central"
+CONTENTMAP_WATERMARK_POSITION_BOTTOM_LEFT="Inferior izquierda"
+CONTENTMAP_WATERMARK_POSITION_BOTTOM_RIGHT="Inferior derecha"
 
 ;geo_chart_settings
-GEO_TAB_TITLE="GEO Chart Settings"
-CONTENTMAP_DATASOURCE_LBL_DESC="Show the Chart Map by the Joomla TAG or the Google Map by the Joomla articles."
-CONTENTMAP_JOOMLA_ARTICLES="Joomla articles - Google Map"
-CONTENTMAP_JOOMLA_TAGS="Joomla TAGS - Chart Map"
-CONTENTMAP_DISABLE_GRADATION_LABEL="Disable gradient"
-CONTENTMAP_DISABLE_GRADATION_DESC="Enable/disable the color and size gradient"
-GEO_DISPLAYMODE_LABEL="Display mode"
-GEO_DISPLAYMODE_DESC="Which type of map this is. the datatable format must match the value specified."
-GEO_REGION_LABEL="Region"
-GEO_REGION_DESC="The area to display on the map."
-GEO_RESOLUTION_LABEL="Resolution"
-GEO_RESOLUTION_DESC="<b>'countries'</b> - Supported for all regions, except for US state regions.<br />
-<b>'provinces'</b> - Supported only for country regions and US state regions. Not supported for all countries; please test a country to see whether this option is supported.<br />
-<b>'metros'</b> - Supported for the US country region and US state regions only."
-GEO_ENABLEREGIONINTERACTIVITY_LABEL="Enable region interactivity"
-GEO_ENABLEREGIONINTERACTIVITY_DESC="If yes, enable region interactivity, including focus and tool-tip elaboration on mouse hover"
+GEO_TAB_TITLE="Mapa gráfico"
+CONTENTMAP_DATASOURCE_LBL_DESC="Habilite el mapa gráfico con las Etiquetas de Joomla o mantenga el mapa de Google Maps utilizando las coordenadas de los artículos de Joomla."
+CONTENTMAP_JOOMLA_ARTICLES="Artículos de Joomla - Google Maps"
+CONTENTMAP_JOOMLA_TAGS="Etiquetas de Joomla - Mapa gráfico"
+CONTENTMAP_DISABLE_GRADATION_LABEL="Desactiva gradación"
+CONTENTMAP_DISABLE_GRADATION_DESC="Activa/desactiva la gradación del color y del tamaño. Con la gradación de los puntos o regiones activa, aquellos con un menor número de elementos pueden aparecer más pequeños y con un color diferente; con la gradación desactiva son todos iguales."
+GEO_DISPLAYMODE_LABEL="Elementos a destacar"
+GEO_DISPLAYMODE_DESC="Seleccione el tipo de elementos que desea poner de relieve en el mapa gráfico. Si has asociado a los elementos de Joomla (artículos, categorías, contactos, etc ..) etiquetas con nombres de ciudades, debe seleccionar Ciudades/Puntos para ver los distintos puntos. Si has asociado a los elementos de Joomla (artículos, categorías, contactos, etc ..) etiquetas con nombres de zonas, regiones, naciones, debes seleccionar Regiones/Naciones para ver las áreas destacadas."
+GEO_REGION_LABEL="Zona del mapo"
+GEO_REGION_DESC="Seleccione la zona que deseas ver en el mapa y que contiene las etiquetas."
+GEO_RESOLUTION_LABEL="Vista"
+GEO_RESOLUTION_DESC="Seleccione el tipo de gráfico visual del mapa. Si como Zona del mapo has elegido una nación, puedes activar la vista de las regiones pertinentes. No se pueden ver las regiones en áreas que incluyen más países. La vista USA se limita sólo a la selección de la Zona del mapo USA."
+GEO_ENABLEREGIONINTERACTIVITY_LABEL="Mapa interactivo"
+GEO_ENABLEREGIONINTERACTIVITY_DESC="Si se activa, muestra las áreas en mouseover."
 GEO_KEEPASPECTRATIO_LABEL="Keep aspect ratio"
 GEO_KEEPASPECTRATIO_DESC="Keep aspect ratio desc"
-GEO_MARKEROPACITY_LABEL="Marker opacity"
-GEO_MARKEROPACITY_DESC="The opacity of the markers, where 0.0 is fully transparent and 1.0 is fully opaque."
-GEO_COLORAXIS_MINVALUE_LABEL="Min Value"
-GEO_COLORAXIS_MINVALUE_DESC="Minimum value of color column in chart data. if present, specifies a minimum value for chart color data."
-GEO_COLORAXIS_MAXVALUE_LABEL="Max Value"
-GEO_COLORAXIS_MAXVALUE_DESC="Maximum value of color column in chart data. if present, specifies a maximum value for chart color data."
-GEO_COLORAXIS_FROMCOLOR_LABEL="From Color"
-GEO_COLORAXIS_FROMCOLOR_DESC="Starting color in gradient"
-GEO_COLORAXIS_TOCOLOR_LABEL="To color"
-GEO_COLORAXIS_TOCOLOR_DESC="Ending color in gradient"
-GEO_DATALESSREGIONCOLOR_LABEL="Dataless region color"
-GEO_DATALESSREGIONCOLOR_DESC="Colors to assign to regions with no associated data."
-AUTO_CHOOSE_BASED_ON_THE_FORMAT_OF_THE_DATA="Auto - choose based on the format of the data"
-REGION_MAP="Region Map"
-MARKER_MAP="Marker Map"
-COUNTRIES="Countries"
-PROVINCES="Provinces"
-METROS="Metros"
+GEO_MARKEROPACITY_LABEL="Trasparencia marcadores"
+GEO_MARKEROPACITY_DESC="El nivel de transparencia de los marcadores, donde 0.0 es completamente transparente y 1.0 es totalmente opaco."
+GEO_COLORAXIS_MINVALUE_LABEL="Valor mínimo"
+GEO_COLORAXIS_MINVALUE_DESC="El valor mínimo de la columna de color en los datos del gráfico. Si está presente, especifica un valor mínimo de los datos de color gráfico."
+GEO_COLORAXIS_MAXVALUE_LABEL="Valor máximo"
+GEO_COLORAXIS_MAXVALUE_DESC="El valor máximo de la columna de color en los datos del gráfico. Si está presente, especifica un valor máximo de los datos de color gráfico."
+GEO_COLORAXIS_FROMCOLOR_LABEL="De color"
+GEO_COLORAXIS_FROMCOLOR_DESC="Si la gradación es activa, esto es el color básico del valor mínimo"
+GEO_COLORAXIS_TOCOLOR_LABEL="A color"
+GEO_COLORAXIS_TOCOLOR_DESC="Si la gradación es activa, esto es el color básico del valor máximo"
+GEO_DATALESSREGIONCOLOR_LABEL="Color regiones sin datos"
+GEO_DATALESSREGIONCOLOR_DESC="Color para asignar a las regiones sin datos asociados."
+AUTO_CHOOSE_BASED_ON_THE_FORMAT_OF_THE_DATA="Auto - elegir basado en el formato de los datos"
+REGION_MAP="Regiones/Naciones"
+MARKER_MAP="Ciudades/Puntos"
+COUNTRIES="Naciones"
+PROVINCES="Regiones"
+METROS="USA"
 
-CONTENTMAP_POSITION_LBL="Position"
-CONTENTMAP_POSITION_DSC="Choose the map position inside the article"
-CONTENTMAP_BEFORECONTENT="Top"
-CONTENTMAP_BEFORECONTENT_LEFT="Top Left"
-CONTENTMAP_BEFORECONTENT_RIGHT="Top Right"
-CONTENTMAP_AFTERCONTENT="Bottom"
-CONTENTMAP_EXCLUDE_ARTICLES_LBL="Exclude in specific Articles"
-CONTENTMAP_EXCLUDE_ARTICLES_DESC="Enter Articles ID you would like to block the map inside. Devide the IDs by comma."
-CONTENTMAP_EXCLUDE_CATEGORIES_LBL="Exclude in specific Categories"
-CONTENTMAP_EXCLUDE_CATEGORIES_DESC="Enter Categories ID you would like to block the map inside. Devide the IDs by comma."
+CONTENTMAP_POSITION_LBL="Posición"
+CONTENTMAP_POSITION_DSC="Seleccione la posición en el mapa dentro del artículo"
+CONTENTMAP_BEFORECONTENT="Superior"
+CONTENTMAP_BEFORECONTENT_LEFT="Superior izquierda"
+CONTENTMAP_BEFORECONTENT_RIGHT="Superior derecha"
+CONTENTMAP_AFTERCONTENT="Inferior"
+CONTENTMAP_EXCLUDE_ARTICLES_LBL="Excluye artículos específicos"
+CONTENTMAP_EXCLUDE_ARTICLES_DESC="Introduzca el ID de los artículos en los que no desea mostrar el mapa. Divide los ID con comas."
+CONTENTMAP_EXCLUDE_CATEGORIES_LBL="Excluye categorías específicas"
+CONTENTMAP_EXCLUDE_CATEGORIES_DESC="Introduzca el ID de las categorías de artículos en las que no desea mostrar el mapa. Divide los ID con comas."
