--- a/trunk/extras/plg_contentmap/language/es-ES/es-ES.plg_content_contentmap.sys.ini
+++ b/trunk/extras/plg_contentmap/language/es-ES/es-ES.plg_content_contentmap.sys.ini
@@ -1,4 +1,4 @@
 ;Extensions -> Extension Manager -> Manage
 PLG_CONTENT_CONTENTMAP="ContentMap"
-PLG_CONTENTMAP_DESCRIPTION="Shows one place associated to the current article in a Google Map inside the article itself"
+PLG_CONTENTMAP_DESCRIPTION="Muestra un lugar asociado con el artículo actual en un mapa de Google en el interior del propio artículo"
 
