--- a/trunk/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.ini
+++ b/trunk/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.ini
@@ -6,5 +6,5 @@ CONTENTMAP_PLEASE_SAVE="Пожалуйста, сохранитесь для то
 CONTENTMAP_MARKERS_PREVIEW="Предпросмотр маркера"
 CONTENTMAP_FROM_ADDRESS="Начальный адрес"
 
-CONTENTMAP_TAGS_NO_DATA="No tags have been displayed by this module. Add some tags with city o region names."
+CONTENTMAP_TAGS_NO_DATA="Нет тэгов для показа этим модулем. Добавьте теги с городом или названием региона."
 CONTENTMAP_GEOCHART_ELEMENTS="#"
