--- a/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -65,6 +65,13 @@ CONTENTMAP_INFOWINDOW_TEXT_SIZE_DSC="Imposta un limite al numero di caratteri de
 CONTENTMAP_INTRO_CLEAN_HTML_TAGS_LBL="Filtra tag html testo introduttivo"
 CONTENTMAP_INTRO_CLEAN_HTML_TAGS_DSC="Filtra i tag html presenti nel testo introduttivo"
 
+CONTENTMAP_TAKE_INTRO_FROM_LBL="Testo introduttivo da"
+CONTENTMAP_TAKE_INTRO_FROM_DSC="Permette di selezionare da dove andare a prendere il testo che appare nel fumentto della mappa: dall'articolo stesso o dalla sua meta description"
+CONTENTMAP_INTRO_FROM_ARTICLE="Articolo"
+CONTENTMAP_INTRO_FROM_METADESC="Campo Meta description"
+CONTENTMAP_SHOW_WEATHER_LABEL="Tempo Metereologico"
+CONTENTMAP_SHOW_WEATHER_DESC="Mostra il tempo metereologico attaule"
+
 ; Sezione Opzioni del filtro
 CONTENTMAP_FILTERING_OPTIONS_LBL="Opzioni del filtro"
 CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Filtro dinamico su categorie o tag sotto la mappa"
@@ -155,6 +162,8 @@ GEO_COLORAXIS_TOCOLOR_LABEL="Al colore"
 GEO_COLORAXIS_TOCOLOR_DESC="Se la gradazione è attiva, questo è il colore del valore massimo"
 GEO_DATALESSREGIONCOLOR_LABEL="Colore regioni senza dati"
 GEO_DATALESSREGIONCOLOR_DESC="Colore da assegnare alle regioni senza alcun dato associato."
+GEO_BACKGROUNDCOLOR_LABEL="Colore Oceano, Mare, Laghi"
+GEO_BACKGROUNDCOLOR_DESC="Colore da assegnare a tutto c'ò che non è terra."
 AUTO_CHOOSE_BASED_ON_THE_FORMAT_OF_THE_DATA="Auto - choose based on the format of the data"
 REGION_MAP="Regioni/Nazioni"
 MARKER_MAP="Città/Punti"
@@ -172,3 +181,6 @@ CONTENTMAP_EXCLUDE_ARTICLES_LBL="Escludi da Articoli"
 CONTENTMAP_EXCLUDE_ARTICLES_DESC="Inserisci gli ID degli articoli all'interno dei quali non vuoi visualizzare la mappa Dividi gli ID con la virgola."
 CONTENTMAP_EXCLUDE_CATEGORIES_LBL="Escludi da Categorie"
 CONTENTMAP_EXCLUDE_CATEGORIES_DESC="Inserisci gli ID delle categorie dove non vuoi che si visualizzi la mappa all'interno degli articoli. Dividi gli ID con la virgola."
+
+CONTENTMAP_BOTTOM_DESCRIPTION_LABEL="Descrizione Mappa"
+CONTENTMAP_BOTTOM_DESCRIPTION_DSC="Permette di scrivere un testo che apparirà sotto la mappa"
