aggiornati i file di lingua

--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -66,11 +66,11 @@ CONTENTMAP_INTRO_CLEAN_HTML_TAGS_LBL="Filtra tag html testo introduttivo"
 CONTENTMAP_INTRO_CLEAN_HTML_TAGS_DSC="Filtra i tag html presenti nel testo introduttivo"
 
 CONTENTMAP_TAKE_INTRO_FROM_LBL="Testo introduttivo da"
-CONTENTMAP_TAKE_INTRO_FROM_DSC="Permette di selezionare da dove andare a prendere il testo che appare nel fumentto della mappa: dall'articolo stesso o dalla sua meta description"
+CONTENTMAP_TAKE_INTRO_FROM_DSC="Permette di selezionare da dove andare a prendere il testo che appare nel fumetto della mappa: dall'articolo stesso o dalla sua meta description"
 CONTENTMAP_INTRO_FROM_ARTICLE="Articolo"
 CONTENTMAP_INTRO_FROM_METADESC="Campo Meta description"
-CONTENTMAP_SHOW_WEATHER_LABEL="Tempo Metereologico"
-CONTENTMAP_SHOW_WEATHER_DESC="Mostra il tempo metereologico attaule"
+CONTENTMAP_SHOW_WEATHER_LABEL="Tempo Meteorologico"
+CONTENTMAP_SHOW_WEATHER_DESC="Mostra il tempo meteorologico attuale"
 
 ; Sezione Opzioni del filtro
 CONTENTMAP_FILTERING_OPTIONS_LBL="Opzioni del filtro"
@@ -163,7 +163,7 @@ GEO_COLORAXIS_TOCOLOR_DESC="Se la gradazione è attiva, questo è il colore del 
 GEO_DATALESSREGIONCOLOR_LABEL="Colore regioni senza dati"
 GEO_DATALESSREGIONCOLOR_DESC="Colore da assegnare alle regioni senza alcun dato associato."
 GEO_BACKGROUNDCOLOR_LABEL="Colore Oceano, Mare, Laghi"
-GEO_BACKGROUNDCOLOR_DESC="Colore da assegnare a tutto c'ò che non è terra."
+GEO_BACKGROUNDCOLOR_DESC="Colore da assegnare a tutto ciò che non è terra."
 AUTO_CHOOSE_BASED_ON_THE_FORMAT_OF_THE_DATA="Auto - choose based on the format of the data"
 REGION_MAP="Regioni/Nazioni"
 MARKER_MAP="Città/Punti"
