--- a/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.admin.ini
@@ -174,3 +174,15 @@ CONTENTMAP_EXCLUDE_ARTICLES_LBL="Exclude in specific Articles"
 CONTENTMAP_EXCLUDE_ARTICLES_DESC="Enter Articles ID you would like to block the map inside. Devide the IDs by comma."
 CONTENTMAP_EXCLUDE_CATEGORIES_LBL="Exclude in specific Categories"
 CONTENTMAP_EXCLUDE_CATEGORIES_DESC="Enter Categories ID you would like to block the map inside. Devide the IDs by comma."
+
+CONTENTMAP_TAKE_INTRO_FROM_LBL="Intro text from"
+CONTENTMAP_TAKE_INTRO_FROM_DSC="Allows you to select where to get the text that appears in the marker ballon of the map: in the same article or its meta description."
+CONTENTMAP_INTRO_FROM_ARTICLE="Article text"
+CONTENTMAP_INTRO_FROM_METADESC="Meta description"
+CONTENTMAP_SHOW_WEATHER_LABEL="Weather"
+CONTENTMAP_SHOW_WEATHER_DESC="Show the current weather"
+
+GEO_BACKGROUNDCOLOR_LABEL="Color for Ocean, Sea, Lake"
+GEO_BACKGROUNDCOLOR_DESC="Color to be assigned to all that is not earth."
+CONTENTMAP_BOTTOM_DESCRIPTION_LABEL="Map description text"
+CONTENTMAP_BOTTOM_DESCRIPTION_DSC="It allows you to write a text that will appear below the map"
