--- a/trunk/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.admin.ini
@@ -176,14 +176,14 @@ CONTENTMAP_EXCLUDE_ARTICLES_DESC="Введите ID статей, которые
 CONTENTMAP_EXCLUDE_CATEGORIES_LBL="Исключить определенные категории"
 CONTENTMAP_EXCLUDE_CATEGORIES_DESC="Введите ID категорий, которые вы хотите заблокировать для показа карты внутри. Разделяйте ID запятыми."
 
-CONTENTMAP_TAKE_INTRO_FROM_LBL="Intro text from"
-CONTENTMAP_TAKE_INTRO_FROM_DSC="Allows you to select where to get the text that appears in the marker ballon of the map: in the same article or its meta description."
-CONTENTMAP_INTRO_FROM_ARTICLE="Article text"
-CONTENTMAP_INTRO_FROM_METADESC="Meta description"
-CONTENTMAP_SHOW_WEATHER_LABEL="Weather"
-CONTENTMAP_SHOW_WEATHER_DESC="Show the current weather"
+CONTENTMAP_TAKE_INTRO_FROM_LBL="Вступительный текст из"
+CONTENTMAP_TAKE_INTRO_FROM_DSC="Позволяет вам выбирать откуда брать текст, который появится в подсказке маркера на карте: из той же статьи или ее мета описания."
+CONTENTMAP_INTRO_FROM_ARTICLE="Текст статьи"
+CONTENTMAP_INTRO_FROM_METADESC="Meta описание"
+CONTENTMAP_SHOW_WEATHER_LABEL="Погода"
+CONTENTMAP_SHOW_WEATHER_DESC="Показать текущую погоду"
 
-GEO_BACKGROUNDCOLOR_LABEL="Color for Ocean, Sea, Lake"
-GEO_BACKGROUNDCOLOR_DESC="Color to be assigned to all that is not earth."
-CONTENTMAP_BOTTOM_DESCRIPTION_LABEL="Map description text"
-CONTENTMAP_BOTTOM_DESCRIPTION_DSC="It allows you to write a text that will appear below the map"
+GEO_BACKGROUNDCOLOR_LABEL="Цвета для океана, моря, озера"
+GEO_BACKGROUNDCOLOR_DESC="Цвет для всего, что не является землей."
+CONTENTMAP_BOTTOM_DESCRIPTION_LABEL="Текст описания карты"
+CONTENTMAP_BOTTOM_DESCRIPTION_DSC="Это позволяет вам писать текст, который появится под картой"
