- Aggiunto nel tab "Avanzate" il parametro Stile Mappa JSON. - Aggiunto un parametro per visualizzare o meno il tasto per disabilitare tutte le selezioni delle categorie sotto la mappa. - Parametro per far apparire la scritta “leggi tutto” alla fine del testo del fumetto. - Parametro per impostare la dimensione virtuale in html dell’immagine nel fumetto. - Corretti problemi con il multilingua. - Modal all'intallazione/aggiornamento.

--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -43,6 +43,9 @@ CONTENTMAP_MARKERS_PREVIEW="Anteprima icona marker"
 CONTENTMAP_KML_URL_LBL="URL Tracciato KML"
 CONTENTMAP_KML_URL_DSC="Se si inserisce l'url di un tracciato kml, questo verrà visualizzato sulla mappa."
 
+CONTENTMAP_SHOW_READMORE_LABEL="Mostra Leggi tutto"
+CONTENTMAP_SHOW_READMORE_DESC="Permette di scegliere se visualizzare il pulsante leggi tutto nella descrizione del fumetto"
+
 ; Sottosezione Fumetto sui marcatori
 CONTENTMAP_INFOWINDOW_LBL="Fumetto sui marcatori"
 CONTENTMAP_INFOWINDOW_ACTION_LBL="Apri il fumetto"
@@ -72,6 +75,14 @@ CONTENTMAP_INTRO_FROM_METADESC="Campo Meta description"
 CONTENTMAP_SHOW_WEATHER_LABEL="Tempo Meteorologico"
 CONTENTMAP_SHOW_WEATHER_DESC="Mostra il tempo meteorologico attuale"
 
+CONTENTMAP_HIDE_POI_LABEL="Nascondi attività commerciali"
+CONTENTMAP_HIDE_POI_DSC="Permette di scegliere se mostrare o meno le attività commerciali come ristoranti, hotel, ecc."
+
+CONTENTMAP_INFOWINDOW_IMAGE_MAX_WIDTH_LBL="Larghezza massima immagine"
+CONTENTMAP_INFOWINDOW_IMAGE_MAX_WIDTH_DSC="Permette di impostare la larghezza massima dell'immagine nel fumetto"
+CONTENTMAP_INFOWINDOW_IMAGE_MAX_HEIGHT_LBL="Altezza massima immagine"
+CONTENTMAP_INFOWINDOW_IMAGE_MAX_HEIGHT_DSC="Permette di impostare l'altezza massima dell'immagine nel fumetto"
+
 ; Sezione Opzioni del filtro
 CONTENTMAP_FILTERING_OPTIONS_LBL="Opzioni del filtro"
 CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Filtro dinamico su categorie o tag sotto la mappa"
@@ -89,6 +100,9 @@ CONTENTMAP_ALL_ARTICLES="Tutti gli articoli"
 CONTENTMAP_FEATURED_ARTICLES="Articoli in evidenza"
 CONTENTMAP_UNFEATURED_ARTICLES="Articoli non in evidenza"
 
+CONTENTMAP_SHOW_DESELECT_ALL_LBL="Mostra tasto \"Deseleziona Tutti\""
+CONTENTMAP_SHOW_DESELECT_ALL_DSC="Permette di indicare se mostrare o meno il tasto deseleziona tutti"
+
 ; Sezione Opzioni Avanzate
 CONTENTMAP_ALT_CSS_LBL="Foglio di stile alternativo"
 CONTENTMAP_ALT_CSS_DSC="Utilizza un differente foglio di stile fornito dal modulo o creato da te. Carica i tuoi css in /libraries/contentmap/css/"
@@ -102,6 +116,9 @@ CONTENTMAP_CONNECTOR_SMF="Simple Machines Forum"
 CONTENTMAP_CONNECTOR="Connettore esterno"
 CONTENTMAP_CONNECTOR_URL_LBL="URL del connettore"
 CONTENTMAP_CONNECTOR_URL_DSC="Inserire l'url della sorgente dati, esempio: http://miosito.com/libraries/contentmap/json/smf.php"
+
+CONTENTMAP_MAP_STYLE_JSON_LBL="Stile Mappa JSON"
+CONTENTMAP_MAP_STYLE_JSON_DSC="Puoi impostare un codice JSON per definire uno stile personalizzato della mappa. Per maggiori informazioni https://developers.google.com/maps/documentation/javascript/styling#styling_the_default_map"
 
 ;Error messages
 CONTENTMAP_DOCUMENTATION="Vedi la documentazione."
@@ -184,3 +201,4 @@ CONTENTMAP_EXCLUDE_CATEGORIES_DESC="Inserisci gli ID delle categorie dove non vu
 
 CONTENTMAP_BOTTOM_DESCRIPTION_LABEL="Descrizione Mappa"
 CONTENTMAP_BOTTOM_DESCRIPTION_DSC="Permette di scrivere un testo che apparirà sotto la mappa"
+
