--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.ini
@@ -8,3 +8,5 @@ CONTENTMAP_FROM_ADDRESS="Dall'indirizzo"
 
 CONTENTMAP_TAGS_NO_DATA="Non ci sono tags visualizzabili da questo modulo. Aggiungi alcuni tag con nomi di città o regioni ed associali ai rispettivi elementi."
 CONTENTMAP_GEOCHART_ELEMENTS="#"
+
+CONTENTMAP_DESELECT_ALL="Deseleziona Tutti"
