- Corretto parametro per attivare le dimensioni virtuali delle immagini nel fumetto, ora impostato a zero è disabilitato. - Aggiunto filtro nei parametri del modulo per includere/escludere gli articoli tramite id o tags. - Spostati i CSS e JS nella cartella media. - Sul plugin aggiunto il paraametro "Mostra altri punti".

--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -75,13 +75,16 @@ CONTENTMAP_INTRO_FROM_METADESC="Campo Meta description"
 CONTENTMAP_SHOW_WEATHER_LABEL="Tempo Meteorologico"
 CONTENTMAP_SHOW_WEATHER_DESC="Mostra il tempo meteorologico attuale"
 
+CONTENTMAP_SHOW_OTHER_MARKERS_LABEL="Mostra altri punti"
+CONTENTMAP_SHOW_OTHER_MARKERS_DSC="Permette di scegliere se  mostrare o meno gli altri punti sulla mappa"
+
 CONTENTMAP_HIDE_POI_LABEL="Nascondi attività commerciali"
 CONTENTMAP_HIDE_POI_DSC="Permette di scegliere se mostrare o meno le attività commerciali come ristoranti, hotel, ecc."
 
 CONTENTMAP_INFOWINDOW_IMAGE_MAX_WIDTH_LBL="Larghezza massima immagine"
-CONTENTMAP_INFOWINDOW_IMAGE_MAX_WIDTH_DSC="Permette di impostare la larghezza massima dell'immagine nel fumetto"
+CONTENTMAP_INFOWINDOW_IMAGE_MAX_WIDTH_DSC="Permette di impostare la larghezza massima dell'immagine nel fumetto. Se 0 non viene imposta alcuna larghezza massima."
 CONTENTMAP_INFOWINDOW_IMAGE_MAX_HEIGHT_LBL="Altezza massima immagine"
-CONTENTMAP_INFOWINDOW_IMAGE_MAX_HEIGHT_DSC="Permette di impostare l'altezza massima dell'immagine nel fumetto"
+CONTENTMAP_INFOWINDOW_IMAGE_MAX_HEIGHT_DSC="Permette di impostare l'altezza massima dell'immagine nel fumetto. Se 0 non viene imposta alcuna altezza massima."
 
 ; Sezione Opzioni del filtro
 CONTENTMAP_FILTERING_OPTIONS_LBL="Opzioni del filtro"
@@ -91,6 +94,7 @@ CONTENTMAP_FEATURED_ARTICLES_LBL="Articoli in evidenza"
 CONTENTMAP_FEATURED_ARTICLES_DSC="Fitro basato sull'attributo 'In evidenza'."
 CONTENTMAP_ONLYFEATURED="Solo articoli in evidenza"
 CONTENTMAP_AUTHORS_LBL="Autori"
+CONTENTMAP_ARTICLES_LBL="Articoli"
 CONTENTMAP_SELECT_ITEMS_DSC="Seleziona uno o più elementi"
 CONTENTMAP_FILTERINGTYPE_LBL="Tipo di filtro"
 CONTENTMAP_FILTERINGTYPE_DSC="Seleziona 'Inclusivo' per includere gli elementi selezionati, 'Esclusivo' per escluderli."
