aggiornati i file di lingua

--- a/extras/lib_contentmap/language/es-ES/es-ES.contentmap.ini
+++ b/extras/lib_contentmap/language/es-ES/es-ES.contentmap.ini
@@ -8,3 +8,5 @@ CONTENTMAP_FROM_ADDRESS="De la dirección"
 
 CONTENTMAP_TAGS_NO_DATA="No se han mostrado etiquetas por este módulo. Agregue unas etiquetas con nombres de ciudades o regiones y asocialas a sus respectivos elementos (artículos, categorías, contactos, etc ..)."
 CONTENTMAP_GEOCHART_ELEMENTS="#"
+
+CONTENTMAP_DESELECT_ALL="Uncheck All"
