--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -79,7 +79,7 @@ CONTENTMAP_SHOW_OTHER_MARKERS_LABEL="Mostra altri punti"
 CONTENTMAP_SHOW_OTHER_MARKERS_DSC="Permette di scegliere se  mostrare o meno gli altri punti sulla mappa"
 
 CONTENTMAP_HIDE_POI_LABEL="Nascondi attività commerciali"
-CONTENTMAP_HIDE_POI_DSC="Permette di scegliere se mostrare o meno le attività commerciali come ristoranti, hotel, ecc."
+CONTENTMAP_HIDE_POI_DSC="Permette di scegliere se mostrare o meno le attività commerciali come ristoranti, hotel, ecc. visualizzate nella mappa"
 
 CONTENTMAP_INFOWINDOW_IMAGE_MAX_WIDTH_LBL="Larghezza massima immagine"
 CONTENTMAP_INFOWINDOW_IMAGE_MAX_WIDTH_DSC="Permette di impostare la larghezza massima dell'immagine nel fumetto. Se 0 non viene imposta alcuna larghezza massima."
