--- a/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.ini
+++ b/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.ini
@@ -8,3 +8,5 @@ CONTENTMAP_FROM_ADDRESS="Начальный адрес"
 
 CONTENTMAP_TAGS_NO_DATA="Нет тэгов для показа этим модулем. Добавьте теги с городом или названием региона."
 CONTENTMAP_GEOCHART_ELEMENTS="#"
+
+CONTENTMAP_DESELECT_ALL="Uncheck All"
