--- a/extras/lib_contentmap/language/cs-CZ/cs-CZ.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/cs-CZ/cs-CZ.contentmap.admin.ini
@@ -187,3 +187,19 @@ GEO_BACKGROUNDCOLOR_LABEL="Color for Ocean, Sea, Lake"
 GEO_BACKGROUNDCOLOR_DESC="Color to be assigned to all that is not earth."
 CONTENTMAP_BOTTOM_DESCRIPTION_LABEL="Map description text"
 CONTENTMAP_BOTTOM_DESCRIPTION_DSC="It allows you to write a text that will appear below the map"
+
+CONTENTMAP_SHOW_READMORE_LABEL="Show Read more"
+CONTENTMAP_SHOW_READMORE_DESC="Allows you to choose whether to display the read more link in ballons description"
+CONTENTMAP_HIDE_POI_LABEL="Hide commercial activities"
+CONTENTMAP_HIDE_POI_DSC="Allows you to choose whether to show businesses point such as restaurants, hotels, etc. in the map"
+CONTENTMAP_INFOWINDOW_IMAGE_MAX_WIDTH_LBL="Maximum image width"
+CONTENTMAP_INFOWINDOW_IMAGE_MAX_WIDTH_DSC="Allows you to set the maximum width of the image in the balloon. Leave 0 to not set any maximum width."
+CONTENTMAP_INFOWINDOW_IMAGE_MAX_HEIGHT_LBL="Maximum image width"
+CONTENTMAP_INFOWINDOW_IMAGE_MAX_HEIGHT_DSC="Allows you to set the maximum height of the image in the balloon. Leave 0 to not set any maximum height."
+CONTENTMAP_SHOW_DESELECT_ALL_LBL="Show button \"Uncheck All\""
+CONTENTMAP_SHOW_DESELECT_ALL_DSC="Allows you to indicate whether or not to show the button uncheck all"
+CONTENTMAP_MAP_STYLE_JSON_LBL="JSON Map Style"
+CONTENTMAP_MAP_STYLE_JSON_DSC="To modify the styles of the default map type (changes to labels and roads will also affect terrain and satellite maps). For more informations https://developers.google.com/maps/documentation/javascript/styling#styling_the_default_map"
+CONTENTMAP_SHOW_OTHER_MARKERS_LABEL="Show more Marker"
+CONTENTMAP_SHOW_OTHER_MARKERS_DSC="Allows you to indicate whether or not to show more Marker on the map"
+CONTENTMAP_ARTICLES_LBL="Articles"
