--- a/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.ini
+++ b/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.ini
@@ -8,3 +8,5 @@ CONTENTMAP_FROM_ADDRESS="From address"
 
 CONTENTMAP_TAGS_NO_DATA="No tags have been displayed by this module. Add some tags with city o region names."
 CONTENTMAP_GEOCHART_ELEMENTS="#"
+
+CONTENTMAP_DESELECT_ALL="Uncheck All"
