--- a/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
@@ -191,7 +191,7 @@ CONTENTMAP_HIDE_POI_LABEL="Hide commercial activities"
 CONTENTMAP_HIDE_POI_DSC="Allows you to choose whether to show businesses point such as restaurants, hotels, etc. in the map"
 CONTENTMAP_INFOWINDOW_IMAGE_MAX_WIDTH_LBL="Maximum image width"
 CONTENTMAP_INFOWINDOW_IMAGE_MAX_WIDTH_DSC="Allows you to set the maximum width of the image in the balloon. Leave 0 to not set any maximum width."
-CONTENTMAP_INFOWINDOW_IMAGE_MAX_HEIGHT_LBL="Maximum image width"
+CONTENTMAP_INFOWINDOW_IMAGE_MAX_HEIGHT_LBL="Maximum image height"
 CONTENTMAP_INFOWINDOW_IMAGE_MAX_HEIGHT_DSC="Allows you to set the maximum height of the image in the balloon. Leave 0 to not set any maximum height."
 CONTENTMAP_SHOW_DESELECT_ALL_LBL="Show button \"Uncheck All\""
 CONTENTMAP_SHOW_DESELECT_ALL_DSC="Allows you to indicate whether or not to show the button uncheck all"
