Modificato il messaggio post aggiornamento/installazione per far incazzare ancora quelli della JED

--- a/language/es-ES/es-ES.com_contentmap.sys.ini
+++ b/language/es-ES/es-ES.com_contentmap.sys.ini
@@ -6,7 +6,7 @@ COM_CONTENTMAP_DESCRIPTION="Muestra en un mapa de Google lugares asociados a los
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="Esto es una versión no-comercial de ContentMap. Elimina la firma de debajo de los mapas, comprando la versión de pago.<br /> No hay otras limitaciones en funcionalidad, pero comprando un código de licencia puedes ayudarnos a continuar con el desarrollo y soporte."
+COM_CONTENTMAP_PURCHASE="Esta es una versión no comercial de ContentMap. Puede seguir utilizando esta versión gratuita sin limitaciones. Puedes escribir libremente una reseña para <a href="_QQ_"http://extensions.joomla.org/extensions/extension/maps-a-weather/geotagging/contentmap#reviews"_QQ_" target="_QQ_"_blank"_QQ_">ContentMap en la Joomla! Extensions Directory™</a> (JED), gracias por tu ayuda. <br /> Quita la firma debajo de los mapas, comprando la versión de pago. <br /> No hay otras limitaciones a la funcionalidad, pero comprando una versión de pago o escribiendo una reseña en la JED nos ayudarás en el soporte y el desarrollo."
 COM_CONTENTMAP_BUYNOW="Comprar ahora."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Instrucciones"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Uso del plugin"
