--- a/language/it-IT/it-IT.com_contentmap.sys.ini
+++ b/language/it-IT/it-IT.com_contentmap.sys.ini
@@ -6,7 +6,7 @@ COM_CONTENTMAP_DESCRIPTION="Mostra in una Google Map località associate ad arti
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="Questa è una versione non-commerciale di ContentMap. Rimuovi la firma sottostante le mappe, acquistando la versione a pagamento.<br /> Non ci sono altre limitazioni alle funzionalità, ma acquistando una versione a pagamento ci aiuterai nel supporto e sviluppo."
+COM_CONTENTMAP_PURCHASE="Questa è una versione non-commerciale di ContentMap. Puoi continuare ad utilizzare questa versione gratuita senza limitazioni. Puoi liberamente scrivere una recensione per <a href="_QQ_"http://extensions.joomla.org/extensions/extension/maps-a-weather/geotagging/contentmap#reviews"_QQ_" target="_QQ_"_blank"_QQ_">ContentMap nella Joomla! Extensions Directory™</a> (JED), grazie per l'aiuto.  <br />Rimuovi la firma sottostante le mappe, acquistando la versione a pagamento.<br /> Non ci sono altre limitazioni alle funzionalità, ma acquistando una versione a pagamento o scrivendo una recensione nella JED ci aiuterai nel supporto e sviluppo."
 COM_CONTENTMAP_BUYNOW="Acquista ora."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Istruzioni"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Utilizzo del plugin"
