--- a/language/en-GB/en-GB.com_contentmap.sys.ini
+++ b/language/en-GB/en-GB.com_contentmap.sys.ini
@@ -6,7 +6,8 @@ COM_CONTENTMAP_DESCRIPTION="Shows in a Google Map places associated to articles"
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="This is a non-commercial version of ContentMap. Remove the signature below the maps, by purchasing a paid version.<br /> There aren`t other limitations in functionality, but by purchasing a license code you help us continue development and support."
+COM_CONTENTMAP_PURCHASE="This is a non-commercial version of ContentMap. You can continue to use this free version without limitations.
+You can freely write a review for <a href="_QQ_"http://extensions.joomla.org/extensions/extension/maps-a-weather/geotagging/contentmap#reviews"_QQ_" target="_QQ_"_blank"_QQ_">ContentMap on the Joomla! Extensions Directory™</a> (JED), thanks for your help. <br /> Remove the signature below the maps, buying the paid version. <br /> There are no other limitations to functionality, but buying a paid version or writing a review in the JED will help us in the support and development."
 COM_CONTENTMAP_BUYNOW="Buy now."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Instructions"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Plugin usage"
