--- a/language/de-DE/de-DE.com_contentmap.sys.ini
+++ b/language/de-DE/de-DE.com_contentmap.sys.ini
@@ -6,7 +6,7 @@ COM_CONTENTMAP_DESCRIPTION="Zeigt Orte in einer Google Map, zugeordnet zum Artik
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="Dies ist eine Nicht-Kommerzielle Version von ContentMap. Entfernen Sie die Signatur unterhalb der Karten, durch den Kauf einer kostenpflichtigen Version.<br />Es gibt keine weiteren Einschr&auml;nkungen in der Funktionalit&auml;t, jedoch helfen Sie uns durch den Kauf einer Lizenz das Produkt weiter zu Entwicklung."
+COM_CONTENTMAP_PURCHASE="Dies ist eine Nicht-Kommerzielle Version von ContentMap. Entfernen Sie die Signatur unterhalb der Karten, durch den Kauf einer kostenpflichtigen Version.<br />Es gibt keine weiteren Einschr&auml;nkungen in der Funktionalit&auml;t, jedoch helfen Sie uns durch den Kauf einer Lizenz das Produkt weiter zu Entwicklung.<br />You can freely write a review for <a href="_QQ_"http://extensions.joomla.org/extensions/extension/maps-a-weather/geotagging/contentmap#reviews"_QQ_" target="_QQ_"_blank"_QQ_">ContentMap on the Joomla! Extensions Directory™</a> (JED), thanks for your help. "
 COM_CONTENTMAP_BUYNOW="Jetzt kaufen."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Anleitung"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Plugin Verwendung"
