--- a/language/ru-RU/ru-RU.com_contentmap.sys.ini
+++ b/language/ru-RU/ru-RU.com_contentmap.sys.ini
@@ -6,7 +6,7 @@ COM_CONTENTMAP_DESCRIPTION="Показывает на карте Google указ
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="Это не коммерческая версия ContentMap. Уберите подпись под картами преобритя платную версию.<br />Нет никаких ограничений в функционале, однако покупая лицензию, вы помогаете продолжению разработки и поддержки."
+COM_CONTENTMAP_PURCHASE="Это не коммерческая версия ContentMap. Уберите подпись под картами преобритя платную версию.<br />Нет никаких ограничений в функционале, однако покупая лицензию, вы помогаете продолжению разработки и поддержки.<br />You can freely write a review for <a href="_QQ_"http://extensions.joomla.org/extensions/extension/maps-a-weather/geotagging/contentmap#reviews"_QQ_" target="_QQ_"_blank"_QQ_">ContentMap on the Joomla! Extensions Directory™</a> (JED), thanks for your help. "
 COM_CONTENTMAP_BUYNOW="Купить сейчас."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Инструкции"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Использование плагина"
