--- a/language/fr-FR/fr-FR.com_contentmap.sys.ini
+++ b/language/fr-FR/fr-FR.com_contentmap.sys.ini
@@ -6,7 +6,7 @@ COM_CONTENTMAP_DESCRIPTION="Affiche les lieux associés à des articles dans une
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="Ceci est une version non-commerciale du composant ContentMap. Supprimez le copyright sous les cartes en achetant la version payante.<br />Il n'y a aucune autre limitation dans la version non-commerciale, mais en achetant une licence code vous nous aidez à continuer le développement et le support de ce composant."
+COM_CONTENTMAP_PURCHASE="Ceci est une version non-commerciale du composant ContentMap. Supprimez le copyright sous les cartes en achetant la version payante.<br />Il n'y a aucune autre limitation dans la version non-commerciale, mais en achetant une licence code vous nous aidez à continuer le développement et le support de ce composant.<br />You can freely write a review for <a href="_QQ_"http://extensions.joomla.org/extensions/extension/maps-a-weather/geotagging/contentmap#reviews"_QQ_" target="_QQ_"_blank"_QQ_">ContentMap on the Joomla! Extensions Directory™</a> (JED), thanks for your help."
 COM_CONTENTMAP_BUYNOW="Acheter maintenant."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Instructions"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Utilisation du plugin"
