--- a/language/nl-NL/nl-NL.com_contentmap.sys.ini
+++ b/language/nl-NL/nl-NL.com_contentmap.sys.ini
@@ -6,7 +6,7 @@ COM_CONTENTMAP_DESCRIPTION="Toont locaties die samenhangen met artikelen op een 
 COM_CONTENTMAP_MENU ="ContentMap"
 
 ;Component pagina
-COM_CONTENTMAP_PURCHASE="Dit is een niet-commerciële versie van ContentMap. Verwijder de handtekening onder de kaarten, door een betaalde versie te kopen.<br />Er zijn geen beperkingen in de functionaliteit, maar door de een licentie code te kopen helpt u ons met de ontwikkeling en ondersteuning. "
+COM_CONTENTMAP_PURCHASE="Dit is een niet-commerciële versie van ContentMap. Verwijder de handtekening onder de kaarten, door een betaalde versie te kopen.<br />Er zijn geen beperkingen in de functionaliteit, maar door de een licentie code te kopen helpt u ons met de ontwikkeling en ondersteuning.<br />You can freely write a review for <a href="_QQ_"http://extensions.joomla.org/extensions/extension/maps-a-weather/geotagging/contentmap#reviews"_QQ_" target="_QQ_"_blank"_QQ_">ContentMap on the Joomla! Extensions Directory™</a> (JED), thanks for your help. "
 COM_CONTENTMAP_BUYNOW="Koop nu"
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Instructies"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Plugin gebruik"
